[package]
name = "panda"
version = "0.1.0"
authors = ["Willem Melching <willem.melching@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libusb = "0.3.0"
bitflags = "1.2.1"

[dev-dependencies]
binascii = "0.1.4"
termion = "1.5.6"
