[package]
name = "pandacan"
version = "0.1.0"
authors = ["Willem Melching <willem.melching@gmail.com>"]
license = "MIT"
edition = "2018"
description = "Library to send/receive CAN data using a panda OBD dongle. See https://github.com/commaai/panda for more information."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libusb = "0.3.0"
bitflags = "1.2.1"

[dev-dependencies]
binascii = "0.1.4"
termion = "1.5.6"
clap = "2.33.3"
